# looop

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
looop/: __init__.py  cli.py  core.py  prompts.py
scripts/: install.py
tests/: __init__.py  test_cli.py  test_core.py  test_packaging.py
